# tg_bot_converter_files

./: .gitignore  pyproject.toml  run.py
app/data/: config.py
app/handlers/: get_files.py  main_menu.py  set_name_to_file_handler.py
app/keyboards/: cancel.py  set_name_to_file_inline_kb.py  use_as_filename_kb.py
app/middlewares/: delete_old_reply_markup.py  keep_multiply_files_from_being_sent.py  reset_states_to_commands.py
app/states/: set_name_to_file_state.py
app/utils/: clear_folder.py  validate_file_name.py  work_with_pdf.py
